IBX-11029: Fixed z-indexes

--- a/src/bundle/Resources/public/scss/ui/modules/muti-file-upload/_upload.popup.scss
+++ b/src/bundle/Resources/public/scss/ui/modules/muti-file-upload/_upload.popup.scss
@@ -1,7 +1,7 @@
 .c-upload-popup {
     background: rgba($ibexa-color-black, 0.35);
     position: fixed;
-    z-index: 10100;
+    z-index: 10250;
     top: 0;
     left: 0;
     height: 100vh;
